@@ -1,10 +1,12 @@
 \name{write.table}
 \alias{write.table}
 \alias{write.table0}
+\alias{write.csv}
+\alias{write.csv2}
 \title{Data Output}
 \description{
   \code{write.table} prints its required argument \code{x} (after
-  converting it to a matrix or data frame if it is not one already) to
+  converting it to a data frame if it is not one nor a matrix) to
   a file or connection.
 }
 \usage{
@@ -13,7 +15,7 @@ write.table(x, file = "", append = FALSE, quote = TRUE, sep = " ",
 	    col.names = TRUE, qmethod = c("escape", "double"))
 }
 \arguments{
-  \item{x}{the object to be written, typically a matrix or data frame.
+  \item{x}{the object to be written, preferably a matrix or data frame.
     If not, it is attempted to coerce \code{x} to a data frame.}
   \item{file}{either a character string naming a file or a connection.
     \code{""} indicates output to the console.}
@@ -28,7 +30,8 @@ write.table(x, file = "", append = FALSE, quote = TRUE, sep = " ",
     \code{x} are separated by this string.}
   \item{eol}{the character(s) to print at the end of each line (row).}
   \item{na}{the string to use for missing values in the data.}
-  \item{dec}{the string to use for decimal points.}
+  \item{dec}{the string to use for decimal points in numeric or complex
+    columns: must be a single character.}
   \item{row.names}{either a logical value indicating whether the row
     names of \code{x} are to be written along with \code{x}, or a
     character vector of row names to be written.}
@@ -46,24 +49,32 @@ write.table(x, file = "", append = FALSE, quote = TRUE, sep = " ",
   \code{col.names = NA} a blank column name is added.  This can be used to
   write CSV files for input to spreadsheets.
 
-  \code{write.table} can be slow for data frames with large numbers
-  (hundreds or more) of columns: this is inevitable as each column could
-  be of a different class and so must be handled separately.
-  Function \code{\link[MASS]{write.matrix}} in package \pkg{MASS}
-  may be much more efficient if \code{x} is a matrix or can be
-  represented in a numeric matrix.
-
-  If the table has no columns the rownames will be written if
+  If the table has no columns the rownames will be written only if
   \code{row.names=TRUE}, and \emph{vice versa}.
 
   Real and complex numbers are written to the maximal possible precision.
-}
-\note{
+
   If a data frame has matrix-like columns these will be converted to
   multiple columns in the result (\emph{via} \code{\link{as.matrix}})
   and so a character \code{col.names} or a numeric \code{quote} should
   refer to the columns in the result, not the input.  Such matrix-like
   columns are unquoted by default.
+
+  Any columns in a data frame which are lists or have a class
+  (e.g. dates) will be converted by the appropriate \code{as.character}
+  method: such columns are unquoted by default.  On the other hand,
+  any class information for a matrix is discarded.
+
+  The \code{dec} argument only applies to columns that are not subject
+  to conversion to character because they have a class or are part of a
+  matrix-like column, in particular to columns protected by
+  \code{\link{I}()}.
+}
+\note{
+  \code{write.table} can be slow for data frames with large numbers
+  (hundreds or more) of columns: this is inevitable as each column could
+  be of a different class and so must be handled separately.  If they
+  are all of the same class, consider using a matrix instead.
 }
 
 \seealso{
@@ -77,10 +88,16 @@ write.table(x, file = "", append = FALSE, quote = TRUE, sep = " ",
 \examples{
 \dontrun{
 ## To write a CSV file for input to Excel one might use
-write.table(x, file = "foo.csv", sep = ",", col.names = NA)
+x <- data.frame(a = I("a \" quote"), b = pi)
+write.table(x, file = "foo.csv", sep = ",", col.names = NA,
+            qmethod = "double")
 ## and to read this file back into R one needs
-read.table("foo.csv", header = TRUE, sep = ",", row.names=1)
-}
-}
+read.table("foo.csv", header = TRUE, sep = ",", row.names = 1)
+## NB: you do need to specify a separator if qmethod = "double".
+
+### Alternatively
+write.csv(x, file = "foo.csv")
+read.csv("foo.csv", row.names = 1)
+}}
 \keyword{print}
 \keyword{file}
